<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.calculator.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/input"
        android:background="@null"
        android:textCursorDrawable="@null"
        android:textSize="50dp"

        android:gravity="right|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/delete_all"
            android:layout_weight="1"
            android:text="@string/delete_all"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/delete"
            android:layout_weight="1"
            android:text="@string/delete"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_devide"
            android:layout_weight="1"
            android:text="@string/button_devide"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_multiply"
            android:layout_weight="1"
            android:text="@string/button_multiply"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_7"
            android:layout_weight="1"
            android:text="@string/button_7"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_8"
            android:layout_weight="1"
            android:text="@string/button_8"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_9"
            android:layout_weight="1"
            android:text="@string/button_9"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_subtract"
            android:layout_weight="1"
            android:text="@string/button_subtract"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_4"
            android:layout_weight="1"
            android:text="@string/button_4"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_5"
            android:layout_weight="1"
            android:text="@string/button_5"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_6"
            android:layout_weight="1"
            android:text="@string/button_6"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/button_add"
            android:layout_weight="1"
            android:text="@string/button_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_1"
                    android:layout_weight="1"
                    android:text="@string/button_1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_2"
                    android:layout_weight="1"
                    android:text="@string/button_2"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_3"
                    android:layout_weight="1"
                    android:text="@string/button_3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_mod"
                    android:layout_weight="1"
                    android:text="@string/button_mod"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_0"
                    android:layout_weight="1"
                    android:text="@string/button_0"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:id="@+id/button_point"
                    android:layout_weight="1"
                    android:text="@string/button_point"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:id="@+id/button_equal"
                android:layout_weight="1"
                android:text="@string/button_equal"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
